tests/rosetta/out/Smalltalk/abc-problem.out
/workspace/mochi/tests/rosetta/out/Smalltalk/abc-problem.st:51: parse error, expected '|' or identifier
