tests/rosetta/out/Smalltalk/abc-problem.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| fields res cur i c canSpell b rest j newSpeller bl main sp word |
fields := [:s | res := {}.
cur := ''.
i := 0.
[(i < ((s size)))] whileTrue: [.
c := s copyFrom: (i + 1) to: (i + 1).
((c = (' '))) ifTrue: [
((0 > 0)) ifTrue: [
res := res copyWith: cur.
cur := ''.
] .
] ifFalse: [
cur := (cur + c).
].
i := (i + 1).
].
.
((((cur size)) > 0)) ifTrue: [
res := res copyWith: cur.
] .
res. ].
canSpell := [:word :blks | ((((word size)) = 0)) ifTrue: [
true.
] .
c := lower value: word copyFrom: (0 + 1) to: 1.
i := 0.
[(i < ((blks size)))] whileTrue: [.
b := blks at: i.
((((c = (lower value: b copyFrom: (0 + 1) to: 1))) or: [((c = (lower value: b copyFrom: (1 + 1) to: 2)))])) ifTrue: [
rest := {}.
j := 0.
[(j < ((blks size)))] whileTrue: [.
((j ~= i)) ifTrue: [
rest := rest copyWith: blks at: j.
] .
j := (j + 1).
].
.
(canSpell value: word copyFrom: (1 + 1) to: word size value: rest) ifTrue: [
true.
] .
] .
i := (i + 1).
].
.
false. ].
newSpeller := [:blocks | bl := fields value: blocks.
[:w | canSpell value: w value: bl ]. ].
main := [ sp := newSpeller value: 'BO XK DQ CP NA GT RE TG QD FS JW HU VI AN OB ER FS LY PC ZM'.
{'A'. 'BARK'. 'BOOK'. 'TREAT'. 'COMMON'. 'SQUAD'. 'CONFUSE'} do: [:word |.
Transcript show: ((((word + (' '))) + ((sp value: word asString)))) printString; cr.
].
. ].
main value.
